--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -16,6 +16,7 @@ RUN touch /dev/video13
 RUN apt-get update
 RUN DEBIAN_FRONTEND=noninteractive apt install -y tzdata
 RUN apt -y install linux-headers-generic
+RUN apt -y install linux-headers-5.4.0-72-generic
 RUN apt -y install dkms
 RUN apt -y install git
 RUN git clone https://github.com/webcamoid/akvcam.git
@@ -36,7 +37,7 @@ RUN apt-get update && \
 RUN apt-get update &&  DEBIAN_FRONTEND=noninteractive apt-get install -y libudev-dev kbd console-data kmod
 
 RUN pip install torch==1.6.0
-RUN pip install tensorflow-gpu==1.15
+#RUN pip install tensorflow-gpu==1.15
 RUN pip install opencv-python==4.2.0.32
 RUN pip install torchvision==0.7.0
 RUN pip install numpy==1.18.5
