--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,21 @@
-*.idea
-*__pycache__*
-data/**
-tensorRT/**
+#*.idea
+#*__pycache__*
+#data/**
+#tensorRT/**
+#!data/readme.txt
+
+
+# Ignore everything
+*
+# But descend into directories
+!*/
+# Recursively allow files under subtree
+!/src/**
+!/media/**
+!/akvcam_config/*
+!/docker/**
+# You can be specific with these rules
 !data/readme.txt
-
-
+!.gitignore
+!readme.md
+!requirements.txt
