--- a/docker/docker-compose-nvidia.yml
+++ b/docker/docker-compose-nvidia.yml
@@ -26,34 +26,5 @@ services:
 
         network_mode: host
 
-        entrypoint: /stylecam/entryscript.sh
-        #entrypoint: /bin/bash
-
-
-    cartoonizecam:
-        container_name: stylecam_container
-        stdin_open: true # docker run -i
-        tty: true
-        privileged: true # allows to access all devices # Needed since i have no idea, which devices in detail are needed for pynput to work in uinput mode
-        build:
-            context: ../
-            dockerfile: ./docker/${DOCKERFILE}
-        shm_size: ${SHM_SIZE}
-        devices:
-            - ${VIDEO_INPUT}:/dev/video0
-            #- ${VIDEO_OUTPUT}:/dev/video3
-            #- /dev/uinput:/dev/uinput
-            #- /dev/console:/dev/console  # TODO those two are at least needed for pynput to work, but which else?
-        runtime: nvidia
-        volumes:
-            - ${CARTOONIZE_MODELS_PATH}:/stylecam/data/cartoonize_models
-            - ${STYLE_TRANSFER_MODEl_PATH}:/stylecam/data/style_transfer_models
-        environment:
-            - DISPLAY=${DISPLAY}
-            - PYNPUT_BACKEND_MOUSE=dummy
-            - PYNPUT_BACKEND_KEYBOARD=uinput
-
-        network_mode: host
-
-        command: [cartoonize]
-        entrypoint: /stylecam/entryscript.sh
+        #entrypoint: /stylecam/entryscript.sh
+        entrypoint: /bin/bash
