--- a/docker/docker-compose-nvidia.yml
+++ b/docker/docker-compose-nvidia.yml
@@ -5,25 +5,22 @@ services:
         container_name: stylecam_container
         stdin_open: true # docker run -i
         tty: true
-        privileged: true  # Todo maybe with new appraoch not needed
         build:
             context: ../
             dockerfile: ./docker/Dockerfile
         shm_size: 1g
         devices:
             - /dev/video0:/dev/video0 # TODO USER replace with your video input device before the :
-            - /dev/uinput:/dev/uinput
+            - /dev/video12:/dev/video12
+            - /dev/video13:/dev/video13
         runtime: nvidia
         volumes:
             - ${STYLE_TRANSFER_MODEl_PATH}:/stylecam/data/style_transfer_models
         environment:
-            #            - DISPLAY=${DISPLAY}
-            #            - PYNPUT_BACKEND_MOUSE=dummy
-            #            - PYNPUT_BACKEND_KEYBOARD=uinput
-            #              TODO USER adapt parameters. An explanation to each parameter can be found in ../src/main.py
+            # TODO USER adapt parameters. An explanation to each parameter can be found in ../src/main.py
             - STYLE_TRANSFER_MODEl_PATH=./data/style_transfer_models
               #Directory which (subdirectories) contains saved
-              #style transfer networks. Have to end with '.model' or '.pth'.
+            #style transfer networks. Have to end with '.model' or '.pth'.
             #Own styles created with https://github.com/pytorch/examples/tree/master/fast_neural_style can be used.
             - STYLE_SCALE_FACTOR=0.7
             #scale factor of the image sent the neural network
@@ -32,5 +29,5 @@ services:
 
         network_mode: host
 
-        #entrypoint: /stylecam/entryscript.sh
-        entrypoint: /bin/bash
+        entrypoint: /stylecam/entryscript.sh
+        #entrypoint: /bin/bash
