docker compose run stylecam added

--- a/docker/docker-compose-nvidia.yml
+++ b/docker/docker-compose-nvidia.yml
@@ -28,5 +28,5 @@ services:
 
         network_mode: host
 
-        #entrypoint: /stylecam/entryscript.sh
-        entrypoint: /bin/bash
+        entrypoint: /stylecam/entryscript.sh
+        #entrypoint: /bin/bash
